Requisição http com React  Your branch is up to date with 'origin/Caique-Garcia/Trabalhando-HTML-CSS'.
 Changes to be committed:
	modified:   .gitignore
	new file:   requisicaohttp/.gitignore
	new file:   requisicaohttp/README.md
	new file:   requisicaohttp/data/db.json
	new file:   requisicaohttp/package-lock.json
	new file:   requisicaohttp/package.json
	new file:   requisicaohttp/public/favicon.ico
	new file:   requisicaohttp/public/index.html
	new file:   requisicaohttp/public/logo192.png
	new file:   requisicaohttp/public/logo512.png
	new file:   requisicaohttp/public/manifest.json
	new file:   requisicaohttp/public/robots.txt
	new file:   requisicaohttp/src/App.css
	new file:   requisicaohttp/src/App.js
	new file:   requisicaohttp/src/App.test.js
	new file:   requisicaohttp/src/index.css
	new file:   requisicaohttp/src/index.js
	new file:   requisicaohttp/src/logo.svg
	new file:   requisicaohttp/src/reportWebVitals.js
	new file:   requisicaohttp/src/setupTests.js

--- a/requisicaohttp/.gitignore
+++ b/requisicaohttp/.gitignore
@@ -1,13 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-avancando/node_modules
-requicaohttp/node_modules
-challengecss/node_modules
-desafio-avancando/node_modules
-forms/node_modules
-fundamentos/node_modules
-introducao/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
